# nu-workdir-hist

./: .gitignore  LICENSE  README.md  pyproject.toml
.opencode/agents/: supervisor.md  supervisor.md.old.txt  worker.md
.opencode/skills/supervisor-frontend-development/: SKILL.md
.opencode/skills/supervisor-python-export-integration/: SKILL.md
.opencode/skills/supervisor-python-ingest-integration/: SKILL.md
.opencode/skills/supervisor-software-development/: SKILL.md
agent_docs/development/: 2026-07-16-nu-workdir-hist.md
agent_docs/research/: 2026-07-16-nushell-history-format.md
agent_docs/verification/: 2026-07-16-nu-workdir-hist.md
src/nu_workdir_hist/: __init__.py  backend.py  cli.py  errors.py  history.py  paths.py  schema.py
tests/: conftest.py  test_backend.py  test_canonicalization.py  test_cli.py  test_history_query.py  test_paths.py
